# crewai_apps

trip_planner/: agents.py  main.py  pyproject.toml  tasks.py
trip_planner/tools/: calculator_tools.py  search_tools.py
