[project]
name = "trip-planner"
version = "0.1.0"
description = "AI Agent-based Trip Planner"
authors = [
    {name = "envs",email = "olaonipekun2001@yahoo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.0, <=3.12"
dependencies = [
  "crewai>=0.12.4",
  "unstructured==0.10.25",
  "pyowm==3.3.0",
  "tools>=0.1.9",
  "python-dotenv==1.0.0",
  "langchain-openai (>=0.3.2,<0.4.0)",
  "langchain (>=0.3.15,<0.4.0)",
]


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]


[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
